// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be able to specify the size of text 1`] = `
"<p class=\\"nextui-text custom-size\\">test-value</p><style>
        p {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: 14px;
        }
      </style>"
`;

exports[`Text should be able to specify the size of text 2`] = `
"<p class=\\"nextui-text custom-size\\">test-value</p><style>
        p {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: 12rem;
        }
      </style>"
`;

exports[`Text should render P element in the default 1`] = `
"<p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text should render default color when type missing 1`] = `
"<p class=\\"nextui-text\\" type=\\"unknow\\">test-value</p><style>
        p {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text should work with different styles 1`] = `
"<div><p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: var(--nextui-color-secondary);
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: var(--nextui-color-success);
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: var(--nextui-color-warning);
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: var(--nextui-color-error);
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style></div>"
`;

exports[`Text the combined style should be rendered 1`] = `
"<b class=\\"nextui-text\\"><del class=\\"nextui-text\\">test-value</del><style>
        del {
          color: inherit;
          margin: inherit;
          font-weight: undefined;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style></b><style>
        b {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text the specified element should be rendered 1`] = `
"<div><h1 class=\\"nextui-text\\">test-value</h1><style>
        h1 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><h2 class=\\"nextui-text\\">test-value</h2><style>
        h2 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><h3 class=\\"nextui-text\\">test-value</h3><style>
        h3 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><h4 class=\\"nextui-text\\">test-value</h4><style>
        h4 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><h5 class=\\"nextui-text\\">test-value</h5><style>
        h5 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><h6 class=\\"nextui-text\\">test-value</h6><style>
        h6 {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\"nextui-text\\">test-value</p><style>
        p {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          padding:true;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><small class=\\"nextui-text\\">test-value</small><style>
        small {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><span class=\\"nextui-text\\">test-value</span><style>
        span {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><del class=\\"nextui-text\\">test-value</del><style>
        del {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><i class=\\"nextui-text\\">test-value</i><style>
        i {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><em class=\\"nextui-text\\">test-value</em><style>
        em {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style><b class=\\"nextui-text\\">test-value</b><style>
        b {
          color: inherit;
          margin: inherit;
          font-weight: noset;
          text-transform: none;
          ;
        }
        .custom-size {
          font-size: inherit;
        }
      </style></div>"
`;
